@@ -2,10 +2,11 @@ package models.GameWorld.Map.Elements.Collectable;
 
 import models.DataManagers.CropMetaData;
 import models.DataManagers.ForagingCropMetaData;
+import models.DataManagers.MineralMetaData;
 import models.DataManagers.TreeMetaData;
 import models.GameWorld.Enums.SeasonName;
 import models.GameWorld.Farming.*;
-import models.GameWorld.Items.Minerals.Stone;
+import models.GameWorld.Minerals.UnextractedMineral;
 
 import java.util.*;
 
@@ -28,7 +29,7 @@ public class CollectableManager {
                 if (crop.growingSeasons().contains(season)) {
                     register(new CollectableWrapper(
                             seed.getSpawningChance(),
-                            () -> seed.newSeed(1)
+                            seed::clone
                     ), season);
                 }
             }
@@ -39,7 +40,7 @@ public class CollectableManager {
                 if (tree.getGrowingSeasons().contains(season)) {
                     register(new CollectableWrapper(
                             seed.getSpawningChance(),
-                            () -> seed.newSeed(1)
+                            seed::clone
                     ), season);
                 }
             }
@@ -55,10 +56,11 @@ public class CollectableManager {
             }
 
             // Wood
-            register(new CollectableWrapper(0.3, () -> new Wood(3)), season);
+            register(new CollectableWrapper(0.3, Wood::new), season);
 
-            // Stone
-            register(new CollectableWrapper(0.3, () -> new Stone(3)), season);
+            // Rock
+            UnextractedMineral rock = MineralMetaData.getMineral("Rock");
+            register(new CollectableWrapper(rock.getSpawningChance(), rock::extract), season);
         }
     }
 
@@ -96,6 +98,6 @@ public class CollectableManager {
             r -= wrapper.chance();
             if (r <= 0) return wrapper.itemSupplier().get();
         }
-        return pool.get(0).itemSupplier().get();
+        return pool.getFirst().itemSupplier().get();
     }
 }
